--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,11 @@
   <body>
     <header>
       <% if user_signed_in? %>
+      <li>
+        <%= link_to "投稿フォーム", new_post_image_path %>
+      </li>
         <li>
-          <%= buttonz_to "ログアウト", destroy_user_session_path, method: :delete %>
+          <%= button_to "ログアウト", destroy_user_session_path, method: :delete %>
         </li>
       <% else %>
         <li>
